RESOLVED FIXED291581
[merge-back] WebKit: User session corruption and format string vulnerability on global localization variables
https://bugs.webkit.org/show_bug.cgi?id=291581
Summary [merge-back] WebKit: User session corruption and format string vulnerability ...
Chris Dumez
Reported 2025-04-15 11:44:20 PDT
Attachments
Chris Dumez
Comment 1 2025-04-15 11:44:30 PDT
Chris Dumez
Comment 2 2025-04-15 11:45:56 PDT
EWS
Comment 3 2025-04-15 14:59:26 PDT
Committed 293731@main (0d55629e64b2): <https://commits.webkit.org/293731@main> Reviewed commits have been landed. Closing PR #44107 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.