[merge-back] WebKit: User session corruption and format string vulnerability on global localization variables https://bugs.webkit.org/show_bug.cgi?id=291581 rdar://148058226

Reviewed by Per Arne Vollan.

Merge-back 289651.162@safari-7621-branch.

* Source/WTF/wtf/cocoa/VectorCocoa.h:
(WTF::makeVector):
* Source/WebKit/Shared/Cocoa/CoreIPCSecureCoding.mm:
(WebKit::SecureCoding::internalClassNamesExemptFromSecureCodingCrash):
* Source/WebKit/UIProcess/Cocoa/AuxiliaryProcessProxyCocoa.mm:
(WebKit::AuxiliaryProcessProxy::platformOverrideLanguages const):
* Source/WebKit/UIProcess/Cocoa/WebPreferencesCocoa.mm:
(WebKit::WebPreferences::platformGetStringUserValueForKey):

Canonical link: https://commits.webkit.org/293731@main