Source/WebKit/UIProcess/Cocoa/WebPreferencesCocoa.mm
@@ -47,10 +47,7 @@ bool WebPreferences::platformGetStringUserValueForKey(const String& key, String&
     if (!m_identifier)
         return false;
 
-    RetainPtr object = [[NSUserDefaults standardUserDefaults] objectForKey:makeKey(m_identifier, m_keyPrefix, key).get()];
-    if (!object)
-        return false;
-    RetainPtr string = dynamic_objc_cast<NSString>(object.get());
+    RetainPtr string = [[NSUserDefaults standardUserDefaults] stringForKey:makeKey(m_identifier, m_keyPrefix, key).get()];
     if (!string)
         return false;
 
